# zsLearn

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.tex  zstexart.tex
beamersrc/: gougub.tex
cmake/: UseLATEX.cmake
config/: test.xml
data/: style.tex
doc/: 密室逃脱.html  密室逃脱.md  巴士活动.md  活动安排.md
doc/image/: Thumbs.db
doc/tools/: 中文汉字电报码对照表.doc  中文莫尔斯电码表.doc  电报做成图片放桌面.doc  超全摩斯电码表[1].doc  逃脱牢笼.doc
docs/: 171005.md  TODO.md
googletest/: CMakeLists.txt
include/: helloWorld.h  logging.h  zs.h
latexsrc/: gougu.tex
lib/: CMakeLists.txt  helloWorld.cpp  zs.cpp
lnt/: std.lnt  std_a.lnt
log4cplus-1.2.1/: CMakeLists.txt
script/: calc.py  sql.py
src/: Forward-kinematic-chain-example.cpp  RigidBodyPlanning.cpp  hello.pu  hello_world.cpp  zsbeamer.tex
src/Basic/: hello_world.cpp
src/Basic/practice/: 1034.cpp  1035.cpp  1036.cpp  1037.cpp  1038.cpp  1039.cpp  1040.cpp  1041.cpp  1042.cpp
src/Basic/test/: 1043.cpp  1044.cpp  1045.cpp  1046.cpp  1057.cpp  1065.cpp  1067.cpp
src/helloWorld/: CMakeLists.txt  helloWorldMain.cpp  helloWorldTest.cpp
src/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world_test.cpp
src/sequence/: 1-启动和初始化.pu  2-后台轮询.pu  3-配置机器人.pu  4-人机协作.pu  4-人机协作nonote.pu  4.1-人机交互.pu  4.2-语音控制.pu  4.3-手动控制介入.pu  4.4-恢复任务.pu  顺序图.pu
src/state/: 状态图.pu
style/: zsSiStyle_format_preset.xml
test/: zsTest.txt
texsrc/: gougu.tex  hello.tex
